--- a/package.json
+++ b/package.json
@@ -27,18 +27,21 @@
     "README.md"
   ],
   "dependencies": {
+    "@11ty/eleventy-fetch": "^3.0.0",
     "@shower/core": "^3.3.0",
     "@shower/material": "^2.5.0",
     "@shower/ribbon": "^3.5.0"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^1.0.1",
     "@shower/cli": "^0.3.1",
     "path-exists-cli": "^2.0.0"
   },
   "scripts": {
+    "11ty-build": "npx @11ty/eleventy --input=src/ --output=bundled",
     "pdf": "shower pdf",
     "start": "shower serve",
-    "bundle": "shower bundle --files '**' --files '!{docs,node_modules,bundled}{,/**}' --files '!*.{md,toml,json}'",
+    "bundle": "shower bundle --files '**' --files '!{docs,node_modules,bundled}{,/**}' --files '!*.{md,toml,json}' && npm run 11ty-build",
     "archive": "shower archive --files '**' --files '!{docs,node_modules,bundled}{,/**}' --files '!*.{md,toml,json}'",
     "publish": "shower publish --files '**' --files '!{docs,node_modules,bundled}{,/**}' --files '!*.{md,toml,json}'",
     "test": "npm run bundle && ls bundled && npm run archive && path-exists presentation.zip"
